css/business.css
/*!
 * Start Bootstrap - Small Business HTML Template (http://startbootstrap.com)
 * Code licensed under the Apache License v2.0.
 * For details, see http://www.apache.org/licenses/LICENSE-2.0.
 */
@import url(https://fonts.googleapis.com/css?family=Unica+One);
@import url(https://fonts.googleapis.com/css?family=Roboto);

body {
    padding-top: 0px; /* Required padding for .navbar-fixed-top. Change if height of navigation changes. */
}

.navbar-fixed-top .nav {
    padding: 15px 0;
}

.navbar-fixed-top .navbar-brand {
    padding: 0 15px;
}

footer {
    padding: 30px 0;
}

@media(min-width:768px) {
    body {
        padding-top: 0px; /* Required padding for .navbar-fixed-top. Change if height of navigation changes. */
    }

    .navbar-fixed-top .navbar-brand {
        padding: 15px 0;
    }
}

.header {
    background: #353536;
    font-size: 13px;
    color: #fff;
    padding: 15px 0;
}

.top5 { margin-top:5px; }
.top7 { margin-top:7px; }
.top10 { margin-top:10px; }
.top15 { margin-top:15px; }
.top17 { margin-top:17px; }
.top30 { margin-top:30px; }

.media:first-child {
    /*margin-top: 1em;
    border: thin solid #dde1e6;
    padding: 1em;
    border-collapse: collapse;*/
}
h1,h2,h3,h4,h5,h6 {
	font-family: 'Unica One', cursive;
}

.font-small {
	font-size: .8em;
}

.coin-ticker .ct-title {
	font-family: 'Unica One', cursive;
	color: #63c7f7;
  font-size: 1em;
  text-transform: uppercase;
	margin-top: .5em;
  font-weight: bold;
}

.coin-ticker .ct-price {
	font-family: 'Roboto', sans-serif;
	color: #efefef;
  font-size: 2em;
}

.coin-ticker .ct-title2 {
	font-family: 'Unica One', cursive;
	color: #63c7f7;
  font-size: 1em;
  text-transform: uppercase;
  font-weight: bold;
}

.coin-ticker .ct-title span,
.coin-ticker .ct-title2 span {
	color: #dde1e6;
	font-family: 'Roboto', sans-serif;
	font-weight: 300;
}

.coin-ticker .ct-title .pct-positive {
	color: #a7ea62;
}

.coin-ticker .ct-title .pct-negative {
	color: #ea7e62;
}

.coin-ticker .ct-title .pct-negative::after {
position: relative;
  top: 0;
  margin-left: 3px;
  display: inline-block;
  font-family: 'Glyphicons Halflings';
  font-style: normal;
  font-size: .7em;
  font-weight: normal;
  line-height: 1em;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  content:"\e114";

}

.coin-ticker .ct-title .pct-positive::after {
position: relative;
  top: 0;
  margin-left: 3px;
  display: inline-block;
  font-family: 'Glyphicons Halflings';
  font-style: normal;
  font-size: .7em;
  font-weight: normal;
  line-height: 1em;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  content:"\e113";

}

.media {
    height: 120px;
}

